Changelog
=========

1.5b - Crossover release (beta)
----------------
* Fixed some issues regarding indexing of image urls, template calls
* Added view tab to Classified


1.5a - Crossover release (alpha)
----------------
* Crossover release which introduces two new contenttypes: OrderedClassifiedCategory and OrderedClassifieds (container)
* Custom order in Classifieds (container) and the Categories (read the INSTALL.txt)
* Multiple pictures for a classified
* 'E-mail the author' option
* Directlink to classified
* Picture and description added to Categories
* New templates / layout


1.0.1 - Release 1.0.1
----------------
* Added Brazilian Portugese translations [erico_andrei]


1.0 - Release 1.0
----------------
* Release 1.0 of the Classifieds plone addon product


1.0rc1 - Release candidate 2
----------------

* Changed workflow so anonymous users can view classifieds


1.0rc1 - Release candidate 1
----------------

* Cleaned up some code
* Added more documentationstrings
* Freeze of code
* Tested with Plone 3.3rc2


0.6.2 - Beta
----------------

* Cleaned up all pagetemplates
* Fixed bug when using multiple instances of Classifieds object (path bug)
* Fixed price formatting bug in 'by author view'
* Cleaned up python classes and added more documentation




0.6.1 - Beta
----------------

* Added custom workflow for a Classified, which allows users with the role member to add classifieds



0.6 - Beta
----------------

* Price field is not mandatory anymore
* Code cleanup
* Template fixes/formatting
* New validator added
* Translation files updates



0.5 - Beta
----------------

* Fixed translation files


0.4 - Alpha
----------------

* Fixed tiled images bug in templates
* Added formatting for the price values


0.3 - Alpha
----------------

* Fixed bug/issue skins.xml > skins directory


0.2 - Alpha
----------------

* Tested with plone 3.2
* Code cleanup and zcml cleanup
* Remove obsolete templates
* Added validation
* Fixed metadata information

