@@ -3,13 +3,16 @@
       metal:use-macro="here/main_template/macros/master"
       i18n:domain="plone">
 <body>
-        <div metal:fill-slot="main" id="classifieds">
+        <div metal:fill-slot="main" id="classifieds" tal:define="portal context/@@plone_portal_state/portal;">
                 <div tal:replace="structure provider:plone.abovecontenttitle" />
                 <div metal:use-macro="here/global_statusmessage/macros/portal_message">
                         Portal status message
                 </div>
                 <div class="classified_options">
-                        <tal:block tal:define="modificationDate here/Date;
+                        <tal:block tal:define="
+
+                                             mtool context/portal_membership;
+                                             modificationDate here/Date;
                                              creator here/Creator;
                                              author python:mtool.getMemberInfo(creator);
                                              authorName python:author and author['fullname'] or creator;
@@ -32,18 +35,18 @@
                                 <a i18n:translate="classifieds_classifieds_view" tal:attributes="href string:${here/absolute_url}/classifiedsclassified_by_author_view?author=${here/Creator}">View</a>
                                 <tal:block i18n:translate="classifieds_classifieds_all_created_by">all classifieds created by</tal:block>
                                 <tal:block tal:content="authorName">authorName</tal:block>
-                                
-                                
-                                <tal:block tal:define="member python:mtool.getMemberById(creator); 
+
+
+                                <tal:block tal:define="member python:mtool.getMemberById(creator);
                                                         authormail python:member.getProperty('email')">
-                                        
+
                                         <tal:block tal:condition="python: len(authormail) > 0">
                                                 <br />
                                                 <a i18n:translate="classifieds_classifieds_email" tal:attributes="href string:mailto:${authormail}">E-mail</a>
                                                 <tal:block i18n:translate="classified_author">this author</tal:block>
                                         </tal:block>
                                 </tal:block>
-                                
+
                                 <tal:block tal:condition="here/check_delete_permission">
                                         <br />
                                         <a href="delete" i18n:translate="classifieds_classified_delete" tal:attributes="href string:${here/absolute_url}/delete">Delete classified</a>
@@ -76,7 +79,7 @@
                                         <a class="classified_image" tal:attributes="href python:here.additionalimage_large.absolute_url()" target="_blank">
                                             <img tal:attributes="src python:here.additionalimage_mini.absolute_url()" />
                                         </a>
-                                
+
                         </td>
                         <td>
                                 <tal:block tal:content="structure here/getDescription" />
@@ -92,16 +95,37 @@
                 <h2 class="classified_title" i18n:translate="classifieds_label_classifiedscategory">Classifieds Category</h2>
                         <a tal:attributes="href python: context.getParentNode().absolute_url()" tal:content="context/getClassifiedsCategory">Content</a>
                 <br />
-                
-                
-                
+
+
+
                 <h2 class="classified_title"  i18n:translate="classifieds_label_directlink">Directlink:</h2>
                 <a tal:attributes="href python: context.absolute_url()" tal:content="context/absolute_url">Content</a>
-                
-                
-                <div metal:use-macro="here/document_actions/macros/document_actions">
-                     Document actions (print, sendto etc)
-                 </div>                
+
+
+                <div id="document_actions"
+                     class="documentActions"
+                     tal:define="putils context/plone_utils;
+                                 document_actions actions/document_actions|nothing;
+                                 getIconFor nocall:putils/getIconFor">
+                    <tal:docactions tal:condition="document_actions">
+
+                    <h5 class="hiddenStructure" i18n:translate="heading_document_actions">Document Actions</h5>
+
+                    <ul>
+                    <tal:actions repeat="daction document_actions">
+                        <li><a href=""
+                               tal:attributes="href daction/url"
+                               tal:content="daction/title">
+                            </a></li>
+                    </tal:actions>
+
+                    </ul>
+                    </tal:docactions>
+
+                    <div tal:replace="structure provider:plone.documentactions" />
+
+                </div>
+
 
         </div>
 </body>
