@@ -7,6 +7,7 @@
         <div metal:fill-slot="main"
                      tal:define="results python: view.search();
                      Batch python:modules['Products.CMFPlone'].Batch;
+                     portal context/@@plone_portal_state/portal;
                      b_size python:30;
                      b_start python:0;
                      b_start request/b_start | b_start;"  id="classifieds">
@@ -36,18 +37,18 @@
                 <span i18n:translate="classifieds_goto" class="classifieds_goto">Go to </span>
                 <a tal:attributes="href python: context.getParentNode().absolute_url()" tal:content="python: context.getParentNode().Title()">Category</a>
 
-                
+
                         <tal:block tal:condition="context/hasImage|nothing">
                                         <a tal:attributes="href python:here.categoryimage_large.absolute_url()" target="_blank" class="classifiedcategory_image">
                                             <img tal:attributes="src python:here.categoryimage_mini.absolute_url()" />
                                         </a>
                         </tal:block>
-                
+
                 <h1 class="classified_title" tal:content="context/Title"></h1>
-                
+
                 <div tal:content="context/Description"/>
-                
-                
+
+
                 <br />
                 <br />
 
@@ -144,7 +145,7 @@
                                                                 <tal:block tal:condition="python:not portal.isExpired(item)">
                                                                         <td>
                                                                                 <tal:block tal:condition="item/hasImage">
-                                                                                        
+
                                                                                         <img class="image_tile" tal:attributes="src string:${portal_url}/${item/getImageTile}" />
 
                                                                                 </tal:block>
@@ -184,7 +185,7 @@
 
 
                         <br />
- 
+
 
 
                         <!-- list classifieds if there is no search -->
@@ -239,9 +240,9 @@
                                                                                 <tal:block tal:condition="python:not portal.isExpired(item)">
                                                                                         <td>
                                                                                                 <tal:block tal:condition="item/hasImage">
-                                                                                                        
+
                                                                                                         <img class="image_tile" tal:attributes="src string:${portal_url}/${item/getImageTile}" />
-                                                                                                        
+
 
                                                                                                 </tal:block>
                                                                                                 <tal:block tal:condition="not: item/getImageTile">
@@ -249,7 +250,7 @@
                                                                                                         <span i18n:translate="marketplace_no_image_tile_label">No Image</span>
                                                                                                 </tal:block>
                                                                                         </td>
-                                                                                        
+
                                                                                         <td>
                                                                                                 <img tal:attributes="src item/getIcon" />
                                                                                                 <a tal:attributes="href string:${item/getURL}" tal:content="item/Title">Name</a>
@@ -268,7 +269,7 @@
                                 </tal:block>
                                 <!-- end classifieds -->
                         </tal:block>
-                        
+
                        <!-- list (sub)categories, if there is no search -->
                         <tal:block tal:condition="not:view/search">
 
@@ -297,17 +298,17 @@
                                                         </th>
 												<th i18n:translate="classifieds_classifiedsclassified_label_description">
 													Description
-												</th>                                                        
+												</th>
                                                 </tr>
 
                                                 <tbody>
-                                                                
-                                                        
+
+
                                                         <tr tal:repeat="item python: context.getFolderContents(contentFilter={'meta_type':['ClassifiedsCategory','OrderedClassifiedsCategory'],'sort_on':'sortable_title', 'sort_order':context.REQUEST.get('sort_category_order')})" tal:attributes="class python:repeat['item'].odd()==1 and 'odd' or 'even'">
                                                                 <td>
-                                                                        
+
                                                                         <img class="image_tile" tal:attributes="src python:item.getImageTile" />
-                                                                        
+
                                                                 </td>
                                                                 <td>
                                                                         <img class="image_tile" tal:attributes="src item/getIcon" />
@@ -323,7 +324,7 @@
                                 </span>
                         </tal:block>
                         <br />
-                        <!-- end categories -->                        
+                        <!-- end categories -->
                 </form>
         </div>
 </body>
